# image-movie

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  Pipfile  README.md  addMusic.py
backend/: .env.example  Pipfile  addMusic.py  main.py  make_movie.py  pyproject.toml  requirements.txt  rotate_images.py
backend/app/: config.py  jobs.py  main.py  schemas.py  tracks.py
backend/app/api/: routes.py
backend/app/services/: images.py  video.py
backend/assets/music/: CREDITS.md  am.aac  bossa.aac  cafe.aac  calm.aac  dance.aac  electro.aac  emo.aac  epic.aac  happy.aac  house.aac  pop.aac  upbeat.aac
backend/scripts/: fetch_free_tracks.py  generate_sample_tracks.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_images.py  test_release_hardening.py  test_tracks.py
docs/: DEPLOY.md  INFRA_DESIGN.md  PRODUCTION_ASSESSMENT.md  REFACTOR_PLAN.md
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: UploadForm.tsx
frontend/e2e/: upload.spec.ts
frontend/lib/: api.ts
frontend/pages/: index.js
